# Arktor

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_ZH.md  arktor_example.yaml  config_example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/agents/: agent_team.py  deep_research.py  multi_agent_pipeline.py  plan_and_execute.py  react_agent.py
examples/features/: coding_demo.py  session_demo.py  skill_demo.py
skills/comm-it-review/: SKILL.md
src/agent_app/: __init__.py
src/agent_app/observability/: __init__.py  file_freshness.py
src/agent_app/tools/: __init__.py  pdf_parser.py  sub_agent.py  todo_write.py
src/agent_cli/: __init__.py  adapter.py  app.py  approval_handler.py  config.py  headless.py  hooks.py  theme.py
src/agent_cli/commands/: base.py  registry.py  ui.py
src/agent_cli/render/: _code_highlight.py  markdown_stream.py  notices.py  replay.py  status_lines.py  tool_display.py  tool_formatters.py  ui.py
src/agent_cli/repl/: completer.py  fill_block.py  keybindings.py  loop.py  mentions.py  paste.py
src/agent_cli/runtime/: background.py  conversation.py  file_observer.py  plan_mode.py  prefs.py  session.py  shell.py  status.py
src/agent_harness/: __init__.py
src/agent_harness/agent/: __init__.py  base.py  conversational.py  react.py
src/agent_harness/approval/: __init__.py  handler.py  policy.py  rules.py
src/agent_harness/background/: manager.py
src/agent_harness/context/: __init__.py  context.py  state.py  variables.py
src/agent_harness/core/: __init__.py  config.py  errors.py  event.py  message.py  registry.py
src/agent_harness/hooks/: base.py  composite.py  progress.py  tracing.py
src/agent_harness/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  types.py
src/agent_harness/memory/: base.py  compressor.py  retrieval.py  short_term.py
src/agent_harness/orchestration/: __init__.py  dag.py  pipeline.py  router.py  team.py
src/agent_harness/prompt/: patch.py  runtime_context.py  sections.py
src/agent_harness/sandbox/: backend.py  docker.py  manager.py
src/agent_harness/session/: base.py  file_session.py  memory_session.py
src/agent_harness/tool/: __init__.py  base.py  decorator.py  executor.py  registry.py
src/agent_harness/tracing/: __init__.py  collector.py  tracer.py
tests/: conftest.py
tests/integration/: test_at_mention_e2e.py  test_external_tools.py
(+225 files in other folders)
