[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arktor"
version = "0.5.1"
description = "A complete, extensible agent framework for building AI agents and multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arktor contributors"}
]

keywords = ["agents", "agent-sdk", "agent-cli", "ai", "llm", "agentic", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "anthropic>=0.30,<1.0",
    "tiktoken>=0.7,<1.0",
    "pyyaml>=6.0,<7.0",
    "numpy>=1.24,<3.0",
    "aiohttp>=3.9,<4.0",
    "scikit-learn>=1.3",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
web = [
    "tavily-python>=0.3",
    "google-search-results>=2.4",
    "trafilatura>=1.12,<2.0",
]
document = [
    "pypdf>=4.0,<8.0",
]
app = [
    "arktor[web,document]",
]
cli = [
    "prompt-toolkit>=3.0.50",
    "rich>=13.0",
]
sandbox = [
    "docker>=7.0,<8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
arktor = "agent_cli.app:main"

[project.urls]
Repository = "https://github.com/ygyang11/Arktor"
Issues = "https://github.com/ygyang11/Arktor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "E402", "F401", "F841", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real LLM API and network",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
